# hl-rs

./: Cargo.toml  LICENSE.txt
hl-cli/: Cargo.toml
hl-cli/src/: cli.rs  main.rs
src/: highlight_scheme.rs  highlighter.rs  lib.rs  main.rs
