[package]
name = "hl-cli"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A cli tool for colourising / highlighting stdin with regex and writing back to stdout."

[[bin]]
name = "hl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
hl-rs-lib = { version = "1.0.0", path = "../" }
colored = "2.1.0"
regex = "1.11.1"
